# meok-mcp-hardening-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  SECURITY.md  acp.json  glama.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_mcp_hardening_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_audit.py
